force-app/main/default/objects/Revenue_Insight__c/Revenue_Insight__c.object-meta.xml
<CustomObject>
    <description>Stores AI-generated revenue intelligence insights for quotes and orders, synced from Heroku Postgres via Heroku Connect.</description>
    <label>Revenue Insight</label>
    <nameField>
        <displayFormat>RI-{0000}</displayFormat>
        <label>Revenue Insight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenue Insights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>