force-app/main/default/objects/Revenue_Insight__c/fields/Data_360_Segment__c.field-meta.xml
<CustomField>
    <fullName>Data_360_Segment__c</fullName>
    <description>Data Cloud segment label that triggered the last insight update</description>
    <label>Data 360 Segment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>