force-app/main/default/objects/Revenue_Insight__c/fields/Recommendation_Text__c.field-meta.xml
<CustomField>
    <fullName>Recommendation_Text__c</fullName>
    <description>AI-generated recommendation or warning text based on similar deal analysis</description>
    <label>Recommendation Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>