force-app/main/default/objects/Revenue_Insight__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>AI-generated risk score (0-1 scale) indicating deal risk level</description>
    <label>Risk Score</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>