force-app/main/default/objects/Revenue_Insight__c/fields/Similar_Deal_Id__c.field-meta.xml
<CustomField>
    <fullName>Similar_Deal_Id__c</fullName>
    <description>Transaction ID of the most similar historical deal found by AI</description>
    <label>Similar Deal ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>