force-app/main/default/objects/Revenue_Insight__c/fields/Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Id__c</fullName>
    <description>Salesforce Quote/Order ID - Primary key for syncing with Heroku Postgres</description>
    <externalId>true</externalId>
    <label>Transaction ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>